samples/_failures_safe/1761719983_038125_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9d4d8b80.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_9d4d8b80.c:170:9: error: expected expression at end of input
  170 |         "NUMBER", "IDENTIFIER", "OPERATOR", "STRING", "EOF",
      |         ^~~~~~~~
./samples/SAFE/__tmp_9d4d8b80.c:170:9: error: expected declaration or statement at end of input
